--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  max-width: 1600px;
+  margin: auto auto;
+  /* height: 100%; */
+  /* background-color: black; */
+  /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
+    font-family: 'Poppins', sans-serif;
+    background-color: #E5E5E5;
 }
 
 a {
@@ -14,3 +22,18 @@ a {
 * {
   box-sizing: border-box;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  ::-webkit-scrollbar-track {
+    display: none;
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background: #41AC4A; 
+    border-radius: 10px;
+  }
+  ::-webkit-scrollbar-corner{
+    display: none;
+  }
